--- a/client/src/app/components/layout/control-panel/control-panel-page/control-panel-page.component.html
+++ b/client/src/app/components/layout/control-panel/control-panel-page/control-panel-page.component.html
@@ -3,4 +3,7 @@
     <app-solid-button label="Toggle Server Restart Warning" (smartClick)="toggleServerRestart()" />
     <app-solid-button label="Clear DBUser Cache" (smartClick)="clearUserCache()" />
 
+    <input type="text" (input)="onAnnouncementChange($event)" placeholder="Announcement text..." />
+    <app-solid-button label="Send Announcement" (smartClick)="sendServerAnnouncement()" />
+
 </div>
